--- a/templates/index.html
+++ b/templates/index.html
@@ -37,14 +37,14 @@
                 <h3>Current Weather on mars</h3>
                 <p>{{ mars.mars_weather }}</p>
               </figure>
-            </div>>
+            </div>
             <br>
             <div class="col-md-12">  
               <!--  Load the fact table about Mars -->             
               <h3>Mars Facts</h3>                
                 {{ mars.mars_fact|safe }}
 
-            </div>>
+            </div>
           </div>  
         </div>
       </div>
